<?xml version="1.0"?>
<package format="2">
  <name>docker_ros_api_msgs</name>
  <version>0.1.0</version>
  <description>The Docker ROS API Message package</description>


  <maintainer email="Mahmoud@Farshbaf.Net">Mahmoud FArshbaf</maintainer>

  <license>BSD</license>
  <author email="Mahmoud@Farshbaf.Net">Mahmoud Farshbaf</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
   <depend>message_runtime</depend>
  <depend>actionlib</depend>
  <depend>trajectory_msgs</depend>
  <depend>actionlib_msgs</depend>



</package>
